fixed header in mobile view
the text in the header was too close to the edges of the screen and looked weird. Added a little side-padding to the header element to squeeze the text a bit and force the word break to happen at a more appealing spot.

--- a/styles/main.css
+++ b/styles/main.css
@@ -122,6 +122,7 @@ footer p {
         flex-direction: column;
         text-align: center;
         font-size: .9rem;
+        padding: 0 1rem;
     }
 }
 @media (max-width: 490px) {
